describe the data

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -557,12 +557,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>unique</th>\n",
+       "      <th>top</th>\n",
+       "      <th>freq</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <td>10998</td>\n",
+       "      <td>10998</td>\n",
+       "      <td>2024-07-30</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Open</th>\n",
+       "      <td>10998.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>22.29916</td>\n",
+       "      <td>46.003685</td>\n",
+       "      <td>0.049665</td>\n",
+       "      <td>0.299107</td>\n",
+       "      <td>0.53125</td>\n",
+       "      <td>20.204196</td>\n",
+       "      <td>236.479996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>High</th>\n",
+       "      <td>10998.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>22.539055</td>\n",
+       "      <td>46.496031</td>\n",
+       "      <td>0.049665</td>\n",
+       "      <td>0.30371</td>\n",
+       "      <td>0.537946</td>\n",
+       "      <td>20.389554</td>\n",
+       "      <td>237.229996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Low</th>\n",
+       "      <td>10998.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>22.068367</td>\n",
+       "      <td>45.540929</td>\n",
+       "      <td>0.049107</td>\n",
+       "      <td>0.290179</td>\n",
+       "      <td>0.522321</td>\n",
+       "      <td>19.998036</td>\n",
+       "      <td>233.089996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Close</th>\n",
+       "      <td>10998.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>22.312754</td>\n",
+       "      <td>46.03766</td>\n",
+       "      <td>0.049107</td>\n",
+       "      <td>0.298549</td>\n",
+       "      <td>0.53125</td>\n",
+       "      <td>20.19616</td>\n",
+       "      <td>234.820007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Adj Close</th>\n",
+       "      <td>10998.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>21.494496</td>\n",
+       "      <td>45.561916</td>\n",
+       "      <td>0.037857</td>\n",
+       "      <td>0.24184</td>\n",
+       "      <td>0.432079</td>\n",
+       "      <td>17.253029</td>\n",
+       "      <td>234.548523</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Volume</th>\n",
+       "      <td>10998.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>318080644.371704</td>\n",
+       "      <td>335452346.642654</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>113254500.0</td>\n",
+       "      <td>205741200.0</td>\n",
+       "      <td>398527500.0</td>\n",
+       "      <td>7421640800.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Dividends</th>\n",
+       "      <td>10998.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000752</td>\n",
+       "      <td>0.011753</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Stock Splits</th>\n",
+       "      <td>10998.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.001546</td>\n",
+       "      <td>0.083663</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                count unique         top freq              mean  \\\n",
+       "Date            10998  10998  2024-07-30    1               NaN   \n",
+       "Open          10998.0    NaN         NaN  NaN          22.29916   \n",
+       "High          10998.0    NaN         NaN  NaN         22.539055   \n",
+       "Low           10998.0    NaN         NaN  NaN         22.068367   \n",
+       "Close         10998.0    NaN         NaN  NaN         22.312754   \n",
+       "Adj Close     10998.0    NaN         NaN  NaN         21.494496   \n",
+       "Volume        10998.0    NaN         NaN  NaN  318080644.371704   \n",
+       "Dividends     10998.0    NaN         NaN  NaN          0.000752   \n",
+       "Stock Splits  10998.0    NaN         NaN  NaN          0.001546   \n",
+       "\n",
+       "                           std       min          25%          50%  \\\n",
+       "Date                       NaN       NaN          NaN          NaN   \n",
+       "Open                 46.003685  0.049665     0.299107      0.53125   \n",
+       "High                 46.496031  0.049665      0.30371     0.537946   \n",
+       "Low                  45.540929  0.049107     0.290179     0.522321   \n",
+       "Close                 46.03766  0.049107     0.298549      0.53125   \n",
+       "Adj Close            45.561916  0.037857      0.24184     0.432079   \n",
+       "Volume        335452346.642654       0.0  113254500.0  205741200.0   \n",
+       "Dividends             0.011753       0.0          0.0          0.0   \n",
+       "Stock Splits          0.083663       0.0          0.0          0.0   \n",
+       "\n",
+       "                      75%           max  \n",
+       "Date                  NaN           NaN  \n",
+       "Open            20.204196    236.479996  \n",
+       "High            20.389554    237.229996  \n",
+       "Low             19.998036    233.089996  \n",
+       "Close            20.19616    234.820007  \n",
+       "Adj Close       17.253029    234.548523  \n",
+       "Volume        398527500.0  7421640800.0  \n",
+       "Dividends             0.0          0.25  \n",
+       "Stock Splits          0.0           7.0  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import seaborn as scr\n",
-    "import matplotlib.pyplot as plt"
+    "data.describe(include='all').T"
    ]
   },
   {
